# zecli

./: Cargo.toml  LICENSE  README.md
src/: balance.rs  config.rs  data.rs  error.rs  init.rs  main.rs  remote.rs  ui.rs
